src/components/todo-list-item/todo-list-item.css
.todo-list-item {
  justify-content: space-between;
  align-items: center;
}

.todo-list-text {
  word-break: break-all;
}

.todo-list-text--important {
  color: darkblue;
  font-weight: bold;
}

.todo-list-text--finished {
  text-decoration: line-through;
}

.todo-list-item__btns {
  justify-content: space-between;
  width: 67px;
  margin-left: 10px;
}

.todo-list-item__btns button {
  width: 31px;
  height: 31px;
}

.todo-list-item__btn {
  background-color: transparent;
  border: none;
  padding: 0;
  margin: 0;
  cursor: pointer;
  transition: box-shadow .15s;
}

.todo-list-item__btn:focus {
  outline: none;
  box-shadow: 0px 3px 0 0rem rgba(0,123,255,.25);
}

